<resources>
   <string name="app_name">Passport</string>
   <string name="create_profile">Create profile</string>
   <string name="age">Age</string>
   <string name="name">Name</string>
   <string name="Gender">Gender</string>
   <string name="hobbies">Hobbies</string>
   <string name="image">Profile Image</string>
   <string name="save">save</string>
   <string name="db_error">Database Error</string>
   <string name="profiles">Profiles</string>
   <string name="choose">Select…</string>
   <string name="male">Male</string>
   <string name="female">Female</string>
   <string name="nonconforming">Nonconforming</string>
   <string name="an_error_hath_occurred">An error hath occurred in communicating with Firebase.</string>
   <string name="sort">Sort</string>
   <string name="show">Show</string>
   <string name="sortDefault">Default</string>
   <string name="sortNameAsc">Name ⬆</string>
   <string name="sortNameDesc">Name ⬇</string>
   <string name="sortAgeAsc">Age ⬆</string>
   <string name="sortAgeDesc">Age ⬇</string>
   <string name="filterAll">All</string>
   <string name="filterFemale">Women</string>
   <string name="filterMale">Men</string>
   <string name="new_profile">New Profile</string>
   <string name="delete">delete</string>
   <string name="profile_image_create">Profile Image (choose small, please)</string>
</resources>
