<?xml version="1.0" encoding="utf-8"?>

<layout    xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools">
   <data>
      <variable name="profile" type="com.letstwinkle.passport.Profile" />
      <variable name="presenter" type="com.letstwinkle.passport.CreateProfilePresenter" />
   </data>

   <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      >

      <TextView
         android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"/>

      <TextView
         android:id="@+id/genderLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/Gender"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintTop_toBottomOf="@+id/name"/>

      <TextView
         android:id="@+id/ageLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/age"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toBottomOf="@+id/gender"/>

      <TextView
         android:id="@+id/hobbiesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/hobbies"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toTopOf="@+id/hobbies"
         app:layout_constraintBottom_toBottomOf="@+id/hobbies"
         />

      <TextView
         android:id="@+id/imageLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/profile_image_create"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toBottomOf="@+id/hobbies"/>

      <EditText
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName" android:singleLine="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
         app:layout_constraintStart_toEndOf="@id/barrier"
         android:text="@={profile.name}"
         android:onTextChanged="@{() -> presenter.updateSaveEnabled()}"
         tools:layout_editor_absoluteX="152dp" tools:text="Lorem Ipsum"/>

      <EditText
         android:id="@+id/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:text="@={`` + profile.age}"
         android:maxLength="3"
         android:minWidth="80dp"
         android:afterTextChanged="@{() -> presenter.updateSaveEnabled()}"
         app:layout_constraintBaseline_toBaselineOf="@+id/ageLabel"
         app:layout_constraintStart_toEndOf="@id/barrier"
         app:layout_constraintBottom_toTopOf="@+id/hobbies"
         app:layout_constraintWidth_min="50dp"
         tools:background="#ecab99"
         />

      <Spinner
         android:id="@+id/gender"
         android:layout_width="215dp" android:layout_height="23dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
         app:selectionEnum="@={profile.gender}"
         app:selectionChanged="@{() -> presenter.updateSaveEnabled()}"
         tools:layout_editor_absoluteX="137dp"/>

      <EditText
         android:id="@+id/hobbies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textMultiLine"
         android:lines="3"
         android:maxLines="5"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintTop_toBottomOf="@+id/age"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@={profile.hobbies}"
         tools:layout_editor_absoluteX="137dp"
         tools:background="#9edcba"
         />

      <Button
         android:id="@+id/chooseImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/choose"
         app:layout_constraintBaseline_toBaselineOf="@+id/imageLabel"
         app:layout_constraintEnd_toEndOf="parent"
         android:onClick="@{() -> presenter.selectImage()}"
         tools:layout_editor_absoluteX="167dp"/>

      <android.support.constraint.Barrier
         android:id="@+id/barrier" android:layout_width="wrap_content"
         android:layout_height="wrap_content" app:barrierDirection="end"
         app:constraint_referenced_ids="nameLabel,ageLabel,genderLabel,hobbiesLabel"/>

      <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent" android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/chooseImage"
         app:layout_constraintBottom_toTopOf="@+id/saveButton"
         android:layout_marginTop="@dimen/field_top_margin"
         android:layout_marginBottom="@dimen/field_top_margin"
         android:adjustViewBounds="false"
         tools:src="@drawable/test_image"
         />

      <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
         android:text="@string/save"
         android:onClick="@{() -> presenter.saveProfile()}"
         />
   </android.support.constraint.ConstraintLayout>

</layout>