<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
   <data>
      <variable name="profile" type="com.letstwinkle.passport.Profile" />
      <variable name="presenter" type="com.letstwinkle.passport.EditProfilePresenter" />
   </data>

   <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      >

      <TextView
         android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"/>

      <TextView
         android:id="@+id/genderLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/Gender"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintTop_toBottomOf="@+id/name"/>

      <TextView
         android:id="@+id/ageLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/age"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toBottomOf="@+id/gender"/>

      <TextView
         android:id="@+id/hobbiesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/hobbies"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toTopOf="@+id/hobbies"
         app:layout_constraintBottom_toBottomOf="@+id/hobbies"
         />

      <TextView
         android:id="@+id/imageLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/image"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintStart_toStartOf="@+id/nameLabel"
         app:layout_constraintTop_toBottomOf="@+id/hobbies"/>

      <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
         app:layout_constraintStart_toEndOf="@id/barrier"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:text="@{profile.name}"
         tools:layout_editor_absoluteX="152dp" tools:text="Lorem Ipsum"/>

      <TextView
         android:id="@+id/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{`` + profile.age}"
         android:minWidth="80dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/ageLabel"
         app:layout_constraintStart_toEndOf="@id/barrier"
         app:layout_constraintBottom_toTopOf="@+id/hobbies"
         app:layout_constraintWidth_min="50dp"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         tools:background="#ecab99"
         tools:ignore="LabelFor"/>

      <TextView
         android:id="@+id/gender"
         android:layout_width="215dp" android:layout_height="23dp"
         app:layout_constraintStart_toEndOf="@id/barrier"
         app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
         android:text="@{profile.gender.toString()}"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         tools:layout_editor_absoluteX="137dp"/>

      <EditText
         android:id="@+id/hobbies"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:lines="3"
         android:maxLines="5"
         android:layout_marginTop="@dimen/field_top_margin"
         app:layout_constraintTop_toBottomOf="@+id/age"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/barrier"
         android:text="@={profile.hobbies}"
         tools:layout_editor_absoluteX="137dp"
         tools:background="#9edcba"
         />

      <android.support.constraint.Barrier
         android:id="@+id/barrier" android:layout_width="wrap_content"
         android:layout_height="wrap_content" app:barrierDirection="end"
         app:constraint_referenced_ids="nameLabel,ageLabel,genderLabel,hobbiesLabel,imageLabel"/>

      <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent" android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/imageLabel"
         app:layout_constraintBottom_toTopOf="@+id/saveButton"
         android:layout_marginTop="@dimen/field_top_margin"
         android:layout_marginBottom="@dimen/field_top_margin"
         android:adjustViewBounds="false"
         tools:src="@drawable/test_image"
         />

      <Button
         android:id="@+id/deleteButton"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
         android:text="@string/delete"
         android:onClick="@{() -> presenter.deleteProfile()}"
         android:backgroundTint="@android:color/holo_red_light"
         />
      <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/deleteButton"
         android:layout_marginBottom="30dp"
         android:gravity="center"
         android:text="@string/save"
         android:onClick="@{() -> presenter.saveProfile()}"
         />
   </android.support.constraint.ConstraintLayout>

</layout>